[package]
edition = "2021"
name    = "aoc-2022"
version = "0.1.0"

[workspace]
members = [
    "common",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
]

[workspace.dependencies.common]
path = "common"

[workspace.dependencies.nom]
version = "7"

[dependencies]
common = { path = "common" }

day1  = { path = "day1" }
day10 = { path = "day10" }
day11 = { path = "day11" }
day12 = { path = "day12" }
day2  = { path = "day2" }
day3  = { path = "day3" }
day4  = { path = "day4" }
day5  = { path = "day5" }
day6  = { path = "day6" }
day7  = { path = "day7" }
day8  = { path = "day8" }
day9  = { path = "day9" }

clap = { version = "4", features = ["derive"] }
